Outliner - Children objects aren't drawn when colections are hidden #74796

Closed
opened 2020-03-15 23:17:11 +01:00 by Cirno · 7 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GT 730/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Worked: (optional)

Short description of error
Disabling collections in outliner hides children objects if objects are displayed without hierarchy

Exact steps for others to reproduce the error
I have a scene with a cube and a couple of cube children
If I untick "Object Children" in the outliner settings, all the objects are displayed in the outliner
If after that I untick "Collections" then all children disappear
teGIS9K- [x].png M7FffSW- [x].png

#74796.blend

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GT 730/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Worked: (optional) **Short description of error** Disabling collections in outliner hides children objects if objects are displayed without hierarchy **Exact steps for others to reproduce the error** I have a scene with a cube and a couple of cube children If I untick "Object Children" in the outliner settings, all the objects are displayed in the outliner If after that I untick "Collections" then all children disappear ![teGIS9K- [x].png](https://archive.blender.org/developer/F8408778/teGIS9K_1_.png) ![M7FffSW- [x].png](https://archive.blender.org/developer/F8408780/M7FffSW_1_.png) [#74796.blend](https://archive.blender.org/developer/F8408791/T74796.blend)
Author

Added subscriber: @Lambdadelta

Added subscriber: @Lambdadelta
Member

Added subscribers: @natecraddock, @dfelinto, @lichtwerk

Added subscribers: @natecraddock, @dfelinto, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I am reading the documentation here https://docs.blender.org/manual/en/dev/editors/outliner.html#filter the same way, seems to me like the children should not show here, will confirm for now...

CC @dfelinto, @Zachman

I am reading the documentation here https://docs.blender.org/manual/en/dev/editors/outliner.html#filter the same way, seems to me like the children should not show here, will confirm for now... CC @dfelinto, @Zachman

This issue was referenced by 97be726f93

This issue was referenced by 97be726f9319f9b5a3b076a62309549d73ea6aed
Nathan Craddock self-assigned this 2020-08-04 19:46:02 +02:00

The way I read the manual is Object Children should group objects as children under their parents, when disabled to draw a flat list. This is indeed an issue.

The way I read the manual is `Object Children` should group objects as children under their parents, when disabled to draw a flat list. This is indeed an issue.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74796
No description provided.