Fix T74796: Outliner child objects hidden when collections are filtered

Filtering Collections when also filtering object children would only
display the parent object. Add a check for the NO_CHILDREN filter before
creating the object-parent hierarchy.